end__index.html

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
               <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner ">
-              <div class="carousel-item active ">
+              <div class="carousel-item active">
                 <img class="d-block w-100" src="lib/img/sliders/slider_1.jpg" alt="First slide">
                 <div class="row carousel-caption">
-                  <div class="col-lg-6 align-text-top">
+                  <div class="col-lg-6 align-text-top animated fadeInUpBig">
                     <h3 data-wow-delay="0.8s">
                       <span>Профессиональная разработка сайтов</span>
                       ПРИДАЙ<br> АДАПТИВНОСТИ САЙТУ
@@ -82,7 +82,7 @@
               <div class="carousel-item">
                 <img class="d-block w-100" src="lib/img/sliders/slider_2.jpg" alt="Second slide">
                 <div class="row carousel-caption">
-                  <div class="col-lg-6 align-text-top">
+                  <div class="col-lg-6 align-text-top animated fadeInUpBig">
                     <h3 data-wow-delay="0.8s">
                       <span>Маркетинговые и рекламные услуги</span>
                       <br>WEB-САЙТ, PPC, SEO, SMM
@@ -100,7 +100,7 @@
               <div class="carousel-item">
                 <img class="d-block w-100" src="lib/img/sliders/slider_3.jpg" alt="Third slide">
                 <div class="row carousel-caption">
-                  <div class="col-lg-6 align-text-top">
+                  <div class="col-lg-6 align-text-top animated fadeInUpBig">
                     <h3 data-wow-delay="0.8s">
                       <span>Дизайнерские услуги</span>
                       <br>WEB-САЙТ, PPC, SEO, SMM
@@ -139,7 +139,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Главная <span class="sr-only">(current)</span></a>
         </li>
@@ -169,6 +169,10 @@
           <a class="nav-link" href="#">Контакты <span class="sr-only">(current)</span></a>
         </li>
       </ul>
+      <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
+      </form>
     </div>
   </nav>
 </div>
@@ -180,38 +184,38 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12 h1">
-        <div class="about__us">
+        <div class="about__us ">
           <h1>
             <b style="color: #ff0000;">О</b>компании
           </h1>
-          <p>«Prospero» - это маркетинговая компания полного цикла, которая является незаменимой в современном мире высоких технологий, где информация и скорость превыше всего; где книги, журналы и газеты замещаются интернет ресурсами, а общение все больше проходит через социальные сети и мессенджеры. Поэтому в нашу команду мы набрали талантливых, опытных, идущих в ногу со временем специалистов, которые создадут для вас уникальную концепцию эффективного маркетингового плана, с учетом всех нюансов ведения бизнеса в Узбекистане и за рубежом. <br><br>
+          <p class="animated fadeInUpBig">«Prospero» - это маркетинговая компания полного цикла, которая является незаменимой в современном мире высоких технологий, где информация и скорость превыше всего; где книги, журналы и газеты замещаются интернет ресурсами, а общение все больше проходит через социальные сети и мессенджеры. Поэтому в нашу команду мы набрали талантливых, опытных, идущих в ногу со временем специалистов, которые создадут для вас уникальную концепцию эффективного маркетингового плана, с учетом всех нюансов ведения бизнеса в Узбекистане и за рубежом. <br><br>
             Компания «Prospero» профессионально подберет маркетинговую стратегию и план мероприятий по продвижения вашего бизнеса, чтобы добиться эффективного результата и вывести ваш бизнес на лидирующие позиции рынка с минимальными затратами. <br><br> Доверьте ответственный маркетинговый процесс нашей команде и о вашем бренде заговорят!</p>
             <hr>
           </div>
         </div>
       </div>
       <div class="row text-center">
-        <div class="col-lg-2">
+        <div class="col-lg-2 animated fadeInUpBig">
           <img src="lib/img/icon/svg/about/about-1.svg" alt="">
           <h4 class="span"><span>10</span>&nbsp;лет опыта</h4>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-2 animated fadeInUpBig">
          <img src="lib/img/icon/svg/about/about-2.svg" alt="">
          <h4 class="span"><span>100</span>&nbsp;проектов</h4>
        </div>
-       <div class="col-lg-2">
+       <div class="col-lg-2 animated fadeInUpBig">
          <img src="lib/img/icon/svg/about/about-3.svg" alt="">
          <h4 class="span"><span>100</span>&nbsp;клиентов</h4>
        </div>
-       <div class="col-lg-2">
+       <div class="col-lg-2 animated fadeInUpBig">
          <img src="lib/img/icon/svg/about/about-4.svg" alt="">
          <h4 class="span"><span>100</span>&nbsp;страниц кода</h4>
        </div>
-       <div class="col-lg-2">
+       <div class="col-lg-2 animated fadeInUpBig">
          <img src="lib/img/icon/svg/about/about-5.svg" alt="">
          <h4 class="span"><span>100</span>&nbsp;% продаж</h4>
        </div>
-       <div class="col-lg-2"> <img src="lib/img/icon/svg/about/about-6.svg" alt="">
+       <div class="col-lg-2 animated fadeInUpBig"> <img src="lib/img/icon/svg/about/about-6.svg" alt="">
         <h4 class="span"><span>1850к</span>&nbsp;человек</h4>
       </div>
     </div>
@@ -231,7 +235,7 @@
     </div>
     <div class="row">
       <div class="col-lg-4">
-        <div class="container__image">
+        <div class="container__image animated fadeInUpBig">
           <img src="lib/img/icon/marketing.jpg" alt="Avatar" class="image">
           <div class="overlay">
             <h4>МАРКЕТИНГ</h4>
@@ -240,7 +244,7 @@
         </div>
       </div>
       <div class="col-lg-4">
-       <div class="container__image">
+       <div class="container__image animated fadeInUpBig">
         <img src="lib/img/icon/design.jpg" alt="Avatar" class="image">
         <div class="overlay">
           <h4>ДИЗАЙН</h4>
@@ -249,7 +253,7 @@
       </div>
     </div>
     <div class="col-lg-4">
-      <div class="container__image">
+      <div class="container__image animated fadeInUpBig">
         <img src="lib/img/icon/web_dev.jpg" alt="Avatar" class="image">
         <div class="overlay">
           <h4>ВЕБ РАЗРАБОТКА</h4>
@@ -260,7 +264,7 @@
   </div>
   <div class="row">
     <div class="col-lg-4">
-      <div class="container__image">
+      <div class="container__image animated fadeInUpBig">
         <img src="lib/img/icon/smm.jpg" alt="Avatar" class="image">
         <div class="overlay">
           <h4>SMM ПРОДВИЖЕНИЕ</h4>
@@ -269,7 +273,7 @@
       </div>
     </div>
     <div class="col-lg-4">
-      <div class="container__image">
+      <div class="container__image animated fadeInUpBig">
         <img src="lib/img/icon/seo.jpg" alt="Avatar" class="image">
         <div class="overlay">
           <h4>ПОИСКОВАЯ ОПТИМИЗАЦИЯ</h4>
@@ -278,7 +282,7 @@
       </div>
     </div>
     <div class="col-lg-4">
-     <div class="container__image">
+     <div class="container__image animated fadeInUpBig">
       <img src="lib/img/icon/bot.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <h4>БОТОСТРОЕНИЕ</h4>
@@ -293,13 +297,13 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12 h1">
-        <h1 class="pb-5">
+        <h1 class="pb-5 animated fadeInUpBig">
           <b style="color: #ff0000;">Как</b>мы делаем
         </h1>
         <div class="section__2 htm__padding">
           <div class="row p-5">
             <div class="col-lg-4 wcl-4 howtomake">
-              <div class="item consulting">
+              <div class="item consulting animated fadeInUpBig">
                 <h3>
                   <span>1</span>Консалтинг
                 </h3>
@@ -318,7 +322,7 @@
               </div>
             </div>
             <div class="col-lg-4 wcl-4 howtomake">
-              <div class="item production">
+              <div class="item production animated fadeInUpBig">
                 <h3><span>2</span>Производство</h3>
                 <a href="#">
                   <p><img src="lib/img/icon/svg/services/service_2-1.svg" class="icon" alt="">Разработка интернет стратегии компании</p>
@@ -335,7 +339,7 @@
               </div>
             </div>
             <div class="col-lg-4 wcl-4 howtomake">
-             <div class="item promotion">
+             <div class="item promotion animated fadeInUpBig">
               <h3><span>3</span>Продвижение</h3>
               <a href="#">
                 <p><img src="lib/img/icon/svg/services/service_3-1.svg" class="icon" alt="">Разработка интернет стратегии компании</p>
@@ -364,55 +368,203 @@
         </h1>
       </div>
     </div>
-    <div class="row">
+    <div class="row bg-light">
       <div class="col-lg-6 bg__left">
         <img src="lib/img/ourwork/carousel-left-notebook-1.png" alt="">
       </div>
-      <div class="col-lg-5">
-        <div class="right__text">
+      <div class="col-lg-6">
+        <div class="right__text p-3 animated fadeInUpBig">
           <h1><span>КОРПОРАТИВНЫЙ САЙТ</span>  ДЛЯ ЮРИДИЧЕСКОЙ ФИРМЫ LAW OFFICES OF FARRUKH NURIDINOV P.C.</h1>
           <p>
             В последнее время оптовые и торгово-производственные компании сталкиваются с проблемой неэффективности основной деятельности - продаж. Большинство участников рынка работают по схеме "менеджер - прайс-лист – телефон – почта – клиент". Такой подход зачастую приводит к разрывам в коммуникации между поставщиком и дилером, ставит компанию в зависимость от конкретных сотрудников, случайностей и человеческого фактора.
             Итог нашей работы:
             Экономия времени на обработку заказов Повышение качества обслуживания Упрощение работы менеджеров и покупателей Ускорение отгрузки товаров
           </p>
-          <div class="d-flex justify-content-between text-justify">
-            <div class="b__1 p-2">
+          <div class="d-flex justify-content-between text-justify animated fadeInUpBig">
+            <div class="b__1 p-2 h_5">
               <h6>
                 <span>ЦЕЛЬ</span> ПРОЕКТА:
               </h6>
               <p>Представить новые услуги, увеличения клиентов</p>
             </div>
-            <div class="b__2 p-2">
+            <div class="b__2 p-2 h_5">
               <h6>
-                  <span>СРОКИ </span>ИСПОЛНЕНИЯ:
-                </h6>
-                <p>02.2018 - 04.2018</p>
+                <span>СРОКИ </span>ИСПОЛНЕНИЯ:
+              </h6>
+              <p>02.2018 - 04.2018</p>
             </div>
-            <div class="b__3 p-2">
+            <div class="b__3 p-2 h_5 ">
               <h6>
-                  <span>ОКАЗАННЫЕ </span>УСЛУГИ: 
-                </h6>
-                <p>Разработка логотипа;
-                  Разработка брендбука;
-                  Объектная фотосъемка объектов;
-                  Разработка сайта для B2C сегмента;
-                  SEO;SMM.
-                </p>
+                <span>ОКАЗАННЫЕ </span>УСЛУГИ: 
+              </h6>
+              <p>Разработка логотипа;
+                Разработка брендбука;
+                Объектная фотосъемка объектов;
+                Разработка сайта для B2C сегмента;
+                SEO;SMM.
+              </p>          
             </div>
           </div>
+          <div class="d-flex justify-content-between animated fadeInUpBig">
+            <div class="d-flex h_5">
+              <img src="lib/img/icon/svg/corp_site.svg" alt="">
+              <h5><span>ТИП САЙТА: <br></span> КОРПОРАТИВНЫЙ </h5>
+            </div>
+            <div class="d-flex h_5">
+              <img src="lib/img/icon/svg/b2b_icon.svg" alt="">
+              <h5><span>АУДИТОРИЯ:<br></span> B2C</h5>
+            </div>
+            <div class="d-flex h_5">
+              <img src="lib/img/icon/svg/yii2_icon.svg" alt="">
+              <h5><span>CMS <br></span> Wordpress</h5>
+            </div>
+          </div>
+          <button class="btn btn-block btn-success p-2"><span>Подробнее</span></button>
         </div>
       </div>
-      <div class="col-lg-1">
-        <ul>
-                <li><img src="lib/img/icon/svg/corp_site.svg" alt=""><span><br>ТИП САЙТА: <br></span> КОРПОРАТИВНЫЙ</li>
-                <li><img src="lib/img/icon/svg/b2b_icon.svg" alt=""><span><br>АУДИТОРИЯ:<br></span> B2C</li>
-                <li><img src="lib/img/icon/svg/yii2_icon.svg" alt=""><span><br>CMS</span> Wordpress</li>
-              </ul>
+    </div>
+
+    <div class="row bg-light">
+      <div class="col-lg-6 animated fadeInUpBig">
+        <div class="right__text p-3">
+          <h1><span>ИНЕТРЕНЕТ-МАГАЗИН</span> ДЛЯ ДЕТСКОЙ ТРИКОТАЖНОЙ ОДЕЖДЫ МАРКИ «TAKRO»</h1>
+          <p>В последнее время оптовые и торгово-производственные компании сталкиваются с проблемой неэффективности основной деятельности - продаж. Большинство участников рынка работают по схеме "менеджер - прайс-лист – телефон – почта – клиент". Такой подход зачастую приводит к разрывам в коммуникации между поставщиком и дилером, ставит компанию в зависимость от конкретных сотрудников, случайностей и человеческого фактора.</p>
+          <p><b>Итог нашей работы:</b></p>
+          <p style="text-align: justify;">Экономия времени на обработку заказов
+            Повышение качества обслуживания
+            Упрощение работы менеджеров и покупателей
+          Ускорение отгрузки товаров</p>
+          <div class="d-flex justify-content-between text-justify">
+            <div class="b__1 p-2 h_5">
+              <h6>
+                <span>ЦЕЛЬ</span> ПРОЕКТА:
+              </h6>
+              <p>Представить новый бренд, увеличить продажи</p>
+            </div>
+            <div class="b__2 p-2 h_5">
+              <h6>
+                <span>СРОКИ </span>ИСПОЛНЕНИЯ:
+              </h6>
+              <p>09.2017 - 01.2018</p>
+            </div>
+            <div class="b__3 p-2 h_5 ">
+              <h6>
+                <span>ОКАЗАННЫЕ </span>УСЛУГИ: 
+              </h6>
+              <p>Переработка логотипа;
+                Разработка брендбука;
+                Объектная фотосъемка товаров;
+                Разработка сайта для B2C сегмента;
+                Разработка сайта для B2B сегмента;
+                SEO;
+                SMM.
+              </p>          
+            </div>
+          </div>
+          <div class="d-flex justify-content-between">
+            <div class="d-flex h_5">
+              <img src="lib/img/icon/svg/corp_site.svg" alt="">
+              <h5><span>ТИП САЙТА: <br></span> КОРПОРАТИВНЫЙ </h5>
+            </div>
+            <div class="d-flex h_5">
+              <img src="lib/img/icon/svg/b2b_icon.svg" alt="">
+              <h5><span>АУДИТОРИЯ:<br></span> B2C</h5>
+            </div>
+            <div class="d-flex h_5">
+              <img src="lib/img/icon/svg/yii2_icon.svg" alt="">
+              <h5><span>CMS <br></span> Wordpress</h5>
+            </div>
+          </div>
+          <button class="btn btn-block btn-success p-2"><span>Подробнее</span></button>
+        </div>
+      </div>
+      <div class="col-lg-6 bg__right animated fadeInUpBig">
+        <img src="lib/img/ourwork/carousel-left-notebook-2.png" alt="">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12">
+        <h1 class="pb-5 pt-5">
+          <b style="color: #ff0000;">ПОСЛЕДНИЕ </b> РАБОТЫ
+        </h1>
+        <div class="d-flex justify-content-center animated fadeInUpBig">
+          <div class="img__01"><a href="#"><img src="lib/img/webp/legalact.webp" alt=""></a></div>
+          <div class="img__02"><a href="#"><img src="lib/img/webp/nls.webp" alt=""></a></div>
+          <div class="img__03"><a href="#"><img src="lib/img/webp/nuridinov.webp" alt=""></a></div>
+          <div class="img__04"><a href="#"><img src="lib/img/webp/takro.webp" alt=""></a></div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-lg-12 p-5">
+          <button class="btn btn-block btn-outline-success p-2"><span>ВСЕ НАШИ РАБОТЫ</span></button>
+        </div>
       </div>
     </div>
   </div>
 </section>
+<footer id="footer" class="bg-dark">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-3 animated fadeInUpBig">
+        <div class="footer__logo">
+          <img src="lib/img/logo.png" alt="">
+          <p>Компания «Prospero» профессионально подберет маркетинговую стратегию и план мероприятий по продвижения вашего бизнеса тобы добиться эффективного результата и вывести ваш бизнес на лидирующие позиции рынка.</p>
+          <ul style="color: #fff; font-size: 13px; ">
+            <li><a href="#"><i class="fa fa-map-marker"></i>&nbsp; г.Ташкент, Яшнабадский р-н, ул. Паркентская, 327 </a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-lg-3 animated fadeInUpBig">
+        <div class="footer__menu_navigation">
+          <ul> 
+            <li><h5>Навигация:</h5></li>
+            <li>><a href="#">&nbsp;Главная</a></li>
+            <li>><a href="">&nbsp;О нас</a></li>
+            <li>><a href="#">&nbsp;Все услуги</a></li>
+            <li>><a href="">&nbsp;Кейсы</a></li>
+            <li>><a href="#">&nbsp;Статьи</a></li>
+            <li>><a href="#">&nbsp;Контакты</a></li>
+          </ul>       
+        </div>
+      </div>
+      <div class="col-lg-3 animated fadeInUpBig">
+        <div class="footer__menu_service">
+          <ul>
+            <li><h5>Услуги:</h5></li>
+            <li>><a href="#">&nbsp;Маркетинг</a></li>
+            <li>><a href="">&nbsp;Дизайн</a></li>
+            <li>><a href="#">&nbsp;Веб разработка</a></li>
+            <li>><a href="">&nbsp;Поисковая оптимизация</a></li>
+            <li>><a href="">&nbsp;SMM продвижение</a></li>
+            <li>><a href="#">&nbsp;Ботостроение</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-lg-3 animated fadeInUpBig">
+        <div class="footer__menu_contact">
+          <ul class="icons">
+            <li><h5>Контакты:</h5></li>
+            <li>><a href="#">&nbsp;<i class="fa fa-envelope"></i>&nbsp;info@prospero.uz</a></li>
+            <li>><a href="#">&nbsp;<i class="fab fa-telegram"></i>&nbsp;+998 95 199 09 00</a></li>
+            <li>><a href="#">&nbsp;<i class="fab fa-instagram"></i>&nbsp;prospero</a></li>
+            <li>><a href="#">&nbsp;<i class="fab fa-twitter"></i>&nbsp;prospero</a></li>
+            <li>><a href="#">&nbsp;<i class="fab fa-github-alt"></i>&nbsp;prospero</a></li>
+            <li>><a href="fakt.html">&nbsp;<i class="fab fa-facebook"></i>prospero</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+<div class="container-fluid animated fadeInUpBig">
+  <div class="row">
+    <div class="col-lg-12" style="background-color: #111; color: #fff; text-align: center;">
+      Prospero &copy; 2018 Все права защищены
+    </div>
+  </div>
+</div>
 
 <script src="lib/js/jquery-slim.min.js"></script>
 <script src="http://code.jquery.com/jquery-2.2.4.js"></script>
